<resources>
    <string name="app_name">Weather App</string>
    <string name="placeholder_day">Day</string>
    <string name="placeholder_temperature">nn°</string>
    <string name="placeholder_weather">weather</string>
    <string name="placeholder_pressure">nn hPa</string>
    <string name="placeholder_humidity">nn%</string>
    <string name="placeholder_visibility">nn.n km</string>
    <string name="placeholder_dew">n.nn</string>
    <string name="placeholder_time">nn:nn</string>
    <string name="placeholder_wind_speed">n.nn m/s</string>
    <string name="placeholder_wind_direction">nn°</string>
</resources>