<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:foreground="#33000000"
        android:src="@drawable/raw_image_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_curr_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_temperature"
            android:textSize="150sp"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />


        <TextView
            android:id="@+id/tv_curr_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:text="@string/placeholder_weather"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_curr_temp" />


        <LinearLayout
            android:id="@+id/container_weather"
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/bg_container"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_curr_temp"
            app:layout_constraintVertical_bias="0.385">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forecast_day_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_day"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/img_forecast_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_weather_sunny" />

                <TextView
                    android:id="@+id/tv_forecast_temp_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_temperature"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout

                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forecast_day_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_day"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/img_forecast_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_weather_sunny" />

                <TextView
                    android:id="@+id/tv_forecast_temp_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_temperature"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout

                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forecast_day_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_day"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/img_forecast_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_weather_sunny" />

                <TextView
                    android:id="@+id/tv_forecast_temp_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_temperature"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout

                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forecast_day_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_day"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/img_forecast_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_weather_sunny" />

                <TextView
                    android:id="@+id/tv_forecast_temp_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_temperature"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout

                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forecast_day_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_day"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/img_forecast_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_weather_sunny" />

                <TextView
                    android:id="@+id/tv_forecast_temp_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_temperature"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="8dp"
            android:columnCount="2"

            android:rowCount="2"


            android:useDefaultMargins="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_weather">

            <LinearLayout

                android:layout_rowWeight="1"

                android:layout_gravity="fill"

                android:background="@drawable/bg_container"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/weather_container_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/weather_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Sunrise" />

                    <TextView
                        android:id="@+id/tv_sunrise"
                        style="@style/weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_time"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    style="@style/weather_container_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/weather_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Sunset" />

                    <TextView
                        android:id="@+id/tv_sunset"
                        style="@style/weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_time"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_rowSpan="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"

                android:background="@drawable/bg_container"
                android:orientation="vertical">


                <FrameLayout
                    style="@style/weather_container_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/weather_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:text="Real feel" />

                    <TextView
                        android:id="@+id/tv_real_temperature"
                        style="@style/weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/placeholder_temperature"
                        android:textColor="@color/white" />
                </FrameLayout>


                <FrameLayout
                    style="@style/weather_container_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/weather_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="Pressure" />

                    <TextView
                        android:id="@+id/tv_pressure"
                        style="@style/weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/placeholder_pressure"
                        android:textColor="@color/white" />
                </FrameLayout>


                <FrameLayout
                    style="@style/weather_container_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/weather_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="Humidity" />

                    <TextView
                        android:id="@+id/tv_humidity"
                        style="@style/weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/placeholder_humidity"
                        android:textColor="@color/white" />
                </FrameLayout>


                <FrameLayout
                    style="@style/weather_container_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/weather_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="Visibility" />

                    <TextView
                        android:id="@+id/tv_visibility"
                        style="@style/weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/placeholder_visibility"
                        android:textColor="@color/white" />
                </FrameLayout>


                <FrameLayout
                    style="@style/weather_container_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/weather_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="Dew Point" />

                    <TextView
                        android:id="@+id/tv_dew"
                        style="@style/weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/placeholder_dew"
                        android:textColor="@color/white" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout

                android:layout_rowWeight="1"
                android:layout_gravity="fill"

                android:background="@drawable/bg_container"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/weather_container_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/weather_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Speed" />

                    <TextView
                        android:id="@+id/tv_wind_speed"
                        style="@style/weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_wind_speed"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    style="@style/weather_container_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/weather_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Degree" />

                    <TextView
                        android:id="@+id/tv_wind_direction"
                        style="@style/weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_wind_direction"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/layout_loading"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>